[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Menus/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.176471, 0.176471, 0.176471, 0.792157 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 128.0
margin_top = 50.0
margin_right = 191.0
margin_bottom = 130.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 63.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0.768627, 0.768627, 0.768627, 1 )
text = "Paused"
align = 1

[node name="SaveButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 63.0
margin_bottom = 26.0
text = "SAVE"

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 63.0
margin_bottom = 44.0
text = "RESUME"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 48.0
margin_right = 63.0
margin_bottom = 62.0
text = "OPTIONS"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 62.0
text = "MAIN MENU"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 63.0
margin_bottom = 80.0
text = "QUIT"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
